+ male zmiany w js

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
-    <div class="text-center"id="box">
-        <ul id="board"></ul>
+    <div class="text-center"id="board">
+        <ul id="slots"></ul>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
