--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Go game</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+    /*<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>*/
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
