--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Go game</title>
-    /*<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>*/
+     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
+<div class="text-top"id="buttons">
+    <input type="button" class="button" value="Spasuj">
+    <input type="button" class="button" value="Poddaj się">
+    <input type="button" class="button" value="Ten w gratisie">
+</div>
     <div class="text-center"id="board">
         <ul id="slots"></ul>
     </div>
