css buttons now working

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
-<div class="text-top"id="buttons">
-    <input type="button" class="button" value="Spasuj">
-    <input type="button" class="button" value="Poddaj się">
-    <input type="button" class="button" value="Ten w gratisie">
+<div class="text-center"id="buttons">
+    <input type="button" class="button" onclick="sendButton('PASS')" value="Spasuj">
+    <input type="button" class="button" onclick="sendButton('RESIGN')"  value="Poddaj się">
 </div>
     <div class="text-center"id="board">
         <ul id="slots"></ul>
